Fix theme flicker bug

--- a/src/components/Header.module.sass
+++ b/src/components/Header.module.sass
@@ -1,3 +1,5 @@
+@import "../sass/variables.sass"
+
 .header
   position: relative
   padding: 3rem 0
@@ -32,6 +34,7 @@
   margin-left: -1rem
   color: var(--colorHeaderFg)
   margin-bottom: 1rem
+  transition: themeTransition(background)
   svg
     height: 22px
     width: auto
